# gr-mxvii

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-mxviiConfig.cmake
docs/: CMakeLists.txt  README.mxvii
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: mxvii_encoder_example.grc
grc/: CMakeLists.txt  mxvii_encoder.block.yml
include/gnuradio/mxvii/: CMakeLists.txt  api.h  encoder.h
lib/: CMakeLists.txt  encoder_impl.cc  encoder_impl.h  qa_encoder.cc
python/mxvii/: CMakeLists.txt  __init__.py  qa_encoder.py
python/mxvii/bindings/: CMakeLists.txt  encoder_python.cc  python_bindings.cc
python/mxvii/bindings/docstrings/: encoder_pydoc_template.h
